--- a/bukkit-example/pom.xml
+++ b/bukkit-example/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>okaeri-menu-bukkit-example</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.2</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>eu.okaeri</groupId>
             <artifactId>okaeri-menu-bukkit</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.0.2</version>
         </dependency>
 
         <dependency>
