--- a/bukkit/pom.xml
+++ b/bukkit/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>okaeri-menu</artifactId>
         <groupId>eu.okaeri</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>eu.okaeri</groupId>
             <artifactId>okaeri-menu-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.0.2</version>
         </dependency>
 
         <dependency>
