feat(async)!: add reactive async data loading for menu items

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>bukkit</module>
+        <module>bukkit-compat</module>
         <module>test-plugin</module>
     </modules>
 
