--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>eu.okaeri</groupId>
     <artifactId>okaeri-menu</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.17</version>
+    <version>2.0.1-beta.2</version>
 
     <modules>
         <module>bukkit</module>
